--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,6 +36,8 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Basic test
-      run: python nginx-redirect.py < example.txt > vhost.txt
-    - name: Test config
-      run: nginx -t -c ${{ github.workspace }}/vhost.txt
+      run: |
+        sudo python nginx-redirect.py < example.txt > /etc/nginx/sites-available/vhost.conf
+        sudo ln -s /etc/nginx/sites-available/vhost.conf /etc/nginx/sites-enabled/vhost.conf
+    - name: Test Nginx config
+      run: nginx -t
